web/style.css
/* ... */
.tab {
  font-family: sans-serif;
  flex: 1;
  background-color: var(--pico-color-zinc-300);
  color: black;
  font-size: 2vh;
  text-wrap: auto;
  letter-spacing: normal;
  word-spacing: normal;
  vertical-align: top;
  text-rendering: auto;
  padding: 0.5em 1em;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  border-width: 1px;
  border-style: solid;
}

.active-tab {
  background-color: var(--pico-color-zinc-150);
}

.slider {
  height: 15px;
  border-radius: 5px;
  outline: none;
  opacity: 0.7;
  -webkit-transition: 0.2s;
  transition: opacity 0.2s;
  margin-top: 1vh;
  margin-bottom: 1vh;
  width: 33.33% !important;
  cursor: pointer;
}

.slider::-webkit-slider-runnable-track {
  background: none;
}

.thick {
  font-size: 1.5em;
  font-weight: bolder;
}

.daily-bar {
  height: 100px;
  width: 10px;
  display: inline-block;
  border-radius: 25px;
  cursor: pointer;
}

.daily-bar-0 {
  background-color: var(--mood-unfilled);
  height: 20px;
  margin-bottom: 40px;
}

.daily-bar-1 {
  background-color: var(--mood-1);
  height: 30px;
  margin-bottom: 35px;
}

.daily-bar-2 {
  background-color: var(--mood-2);
  height: 40px;
  margin-bottom: 30px;
}

.daily-bar-3 {
  background-color: var(--mood-3);
  height: 60px;
  margin-bottom: 20px;
}

.daily-bar-4 {
  background-color: var(--mood-4);
  height: 100px;
  margin-bottom: 0px;
}

.daily-bar-sleep {
  background-color: var(--mood-3);
  width: 10px;
  display: inline-block;
  border-radius: 25px;
  cursor: pointer;
}

.daily-bar-prompt {
  padding-left: 30px;
  width: 200px;
  display: inline-block;
  overflow: auto;
  margin: 0;
  text-align: center;
}

.daily-bar-detailed {
  height: 100px;
  width: 5px;
  display: inline-block;
  border-radius: 25px;
}

.daily-bar-detailed-prompt {
  padding-left: 30px;
  width: 100px;
  display: inline-block;
  overflow: auto;
  margin: 0;
  padding-bottom: 40px;
}

.daily-bar-detailed-sleep {
  background-color: var(--mood-3);
  width: 5px;
  display: inline-block;
  border-radius: 25px;
}

.daily-bar-detailed-0 {
  background-color: var(--mood-unfilled);
  height: 20px;
  margin-bottom: 40px;
}

.daily-bar-detailed-1 {
  background-color: var(--mood-1);
  height: 30px;
  margin-bottom: 35px;
}

.daily-bar-detailed-2 {
  background-color: var(--mood-2);
  height: 40px;
  margin-bottom: 30px;
}

.daily-bar-detailed-3 {
  background-color: var(--mood-3);
  height: 60px;
  margin-bottom: 20px;
}

.daily-bar-detailed-4 {
  background-color: var(--mood-4);
  height: 100px;
  margin-bottom: 0px;
}

.daily-bar-totaled-0 {
  background-color: var(--mood-unfilled);
}

.daily-bar-totaled-1 {
  background-color: var(--mood-1);
}

.daily-bar-totaled-2 {
  background-color: var(--mood-2);
}

.daily-bar-totaled-3 {
  background-color: var(--mood-3);
}

.daily-bar-totaled-4 {
  background-color: var(--mood-4);
}

.daily-bar-total-prompt {
  font-size: 20px;
  padding-left: 30px;
  display: inline-block;
  overflow: auto;
  margin: 0;
  padding-bottom: 40px;
}

.daily-bar-total-colors {
  display: flex;
  align-items: center;
  width: fit-content;
  transform: rotate(-90deg) translate(-100%) translateY(50%);
}

.daily-bar-total {
  width: 5px;
}

.daily-bar-total-Depression {
  background-color: var(--pico-color-fuchsia-400);
}

.daily-bar-total-Elevation {
  background-color: var(--pico-color-orange-450);
}

.daily-bar-total-Anxiety {
  background-color: var(--pico-color-yellow-150);
}

.daily-bar-total-Irrability {
  background-color: var(--pico-color-green-150);
}

.daily-bar-total-Psychotic {
  background-color: var(--pico-color-red-500);
}

.bipolar-periods {
  text-align: center;
  padding-bottom: 100px;
}

.journal-entries {
  overflow-y: scroll;
  max-height: 15vh;
}

.pill-amount-taken {
  text-align: center;
}

.slider-label {
  display: grid;
  align-items: center;
  padding-left: 5px;
  padding-right: 5px;
}

#spiderweb {
  aspect-ratio: 1 / 2;
}

#line-overview {
  aspect-ratio: 1;
}

.spacer {
  height: 100%;
  grid-area: a;
}

.export-data {
  height: fit-content;
}

.import-field {
  height: fit-content;
}

.tab-title {
  text-align: center;
}

.tab-content {
  padding-bottom: 10vh;
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
}

.prompt > h4 {
  text-align: center;
}

.new-journal-entry-containter {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 5fr 1fr;
}

.save-log-entry-button {
  padding-left: 10px;
  padding-right: 10px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.event-log {
  max-height: 30vh;
  overflow: scroll;
  border: 1px solid var(--pico-form-element-valid-border-color);
  padding: 20px;
  font-size: 20px;
}

#download-settings,
#download-state {
  margin-top: 10px;
}

#update-import-from-text {
  padding: 2px;
}

.indent {
  margin-left: 50px;
}

.filter-query,
.duration-query {
  border: 2px solid var(--pico-color-zinc-300);
  margin: 50px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.filter-query-result,
.duration-query-result {
  text-align: center;
}

.add-query-buttons {
  margin-top: 50px;
}

@media (min-width: 1000px) {
  body {
    padding-left: 15vw;
    padding-right: 15vw;
  }
}

@media (max-width: 400px) {
  body {
    padding-bottom: 3vh;
  }

  .prompt-side {
    display: none;
  }

  .tabs {
    margin-bottom: 0;
  }

  .daily-bar-sleep,
  .daily-bar {
    width: 20px;
  }

  .daily-bar-prompt {
    padding-left: 10px;
    width: 120px;
  }
}

